<resources>
    <!--    not organized names (yet...)-->
    <string name="app_name">Coach</string>
    <string name="prompt_date">Date</string>
    <string name="prompt_time">Time</string>
    <string name="prompt_location">Location</string>
    <string name="prompt_ip">URL</string>
    <string name="create_new_team">Create team</string>
    <string name="team_creation">Create Team</string>
    <string name="load_team">Load team</string>
    <string name="app_title">FootApp!</string>
    <string name="welcome_msg">"Welcome to FootApp!"</string>
    <string name="create">"Create"</string>
    <string name="share">"Share"</string>
    <string name="add_player">"Add Player"</string>
    <string name="todo">"Todo"</string>
    <string name="search_google">"Search Google"</string>
    <string name="to_final_screen">"Finished"</string>
    <string name="prompt_field1">Captain</string>
    <string name="prompt_field2">Judge</string>
    <string name="numOfPlayers">Players: </string>
    <string name="last_config">Load Last Unsaved Configuration </string>
    <string name="name">Name</string>
    <string name="logo">Logo</string>

    <!--    <string name="back">Back</string>-->


    <!--    screen names -->
    <string name="final_screen_name">Game lineup</string>
    <string name="edit_team_screen_name">Edit game</string>
    <string name="create_game_screen_name">Create game</string>
    <string name="choose_or_create_screen_name">Choose or create</string>

    <!--    choose or createGame-->
    <string name="no_fav">No favorites</string>
    <string name="create_game">Create game</string>
    <string name="new_game">New game</string>
    <string name="loadGame">Load game</string>

    <!--    createGame game screen-->
    <string name="promt_num_of_players">How many players?</string>
    <string name="game_creation">Let\'s play</string>
    <string name="prompt_referee">Referee</string>
    <string name="prompt_captain1">Team 1 captain</string>
    <string name="prompt_captain2">Team 2 captain</string>
    <string name="promt_game_name">Name your game</string>
    <string name="more">more…</string>
    <string name="less">less…</string>

    <!--    edit team screen-->
    <string name="back">Back</string>


    <!--    final screen -->
    <string name="save_date">save date to calendar</string>
    <string name="go_to_edit_screen">"Edit game"</string>
    <string name="team_name">Current team name</string>
    <string name="location_button">location</string>
    <string name="date_and_time_button">date and time</string>
    <string name="details_bg">details_of_game</string>
    <string name="players_shirt">player_shirt</string>
    <string name="pitch_bg">pitchBackground</string>
    <string name="no_player">No player</string>
    <string name="title_activity_choose_game">ChooseGame</string>

</resources>
