<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_create_team_background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".TeamCreationForm">

    <TextView
        android:id="@+id/teamCreationTitleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/game_creation"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#D5FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/gameName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:drawableBottom="@drawable/ic_create_team_underscore"
        android:background="@android:color/transparent"

        android:hint="@string/promt_game_name"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:importantForAutofill="no"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/numOfPlayers"
        app:layout_constraintTop_toBottomOf="@+id/teamCreationTitleView" />

    <EditText
        android:id="@+id/numOfPlayers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:drawableBottom="@drawable/ic_create_team_underscore"
        android:background="@android:color/transparent"

        android:hint="@string/promt_num_of_players"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:importantForAutofill="no"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/date"
        app:layout_constraintTop_toBottomOf="@+id/gameName" />

    <!--TODO: add fields for ball, t-shirts, water, judge-->
    <EditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:drawableBottom="@drawable/ic_create_team_underscore"
        android:background="@android:color/transparent"

        android:hint="@string/prompt_date"
        android:imeOptions="actionDone"
        android:inputType="date"
        android:importantForAutofill="no"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numOfPlayers" />

    <EditText
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:drawableBottom="@drawable/ic_create_team_underscore"
        android:background="@android:color/transparent"

        android:hint="@string/prompt_time"
        android:imeOptions="actionDone"
        android:inputType="time"
        android:importantForAutofill="no"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:layout_constraintBottom_toTopOf="@+id/location" />

    <EditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:drawableBottom="@drawable/ic_create_team_underscore"
        android:background="@android:color/transparent"

        android:hint="@string/prompt_location"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:importantForAutofill="no"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time" />

    <ScrollView
        android:id="@+id/TeamCreationScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--TODO: add fields for ball, t-shirts, water, judge-->
            <EditText
                android:id="@+id/captain1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:drawableBottom="@drawable/ic_create_team_underscore"
                android:background="@android:color/transparent"

                android:hint="@string/prompt_captain1"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:importantForAutofill="no"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/captain2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:drawableBottom="@drawable/ic_create_team_underscore"
                android:background="@android:color/transparent"

                android:hint="@string/prompt_captain2"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:importantForAutofill="no"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/referee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:drawableBottom="@drawable/ic_create_team_underscore"
                android:background="@android:color/transparent"

                android:hint="@string/prompt_referee"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:importantForAutofill="no"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/advancedOptionsButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:drawableRight="@drawable/ic_create_team_arrow_advanced"
        android:drawableBottom="@drawable/ic_create_team_underscore_advenced"
        android:enabled="true"
        android:onClick="toggle_contents"
        android:text="@string/advanced"
        android:textAlignment="viewStart"
        android:textColor="#D5FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/createTeamButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TeamCreationScrollView" />

    <Button
        android:id="@+id/createTeamButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="start"
        android:enabled="true"
        android:onClick="create"
        android:text="@string/create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/advancedOptionsButton" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:enabled="true"
        android:onClick="back"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createTeamButton" />

</androidx.constraintlayout.widget.ConstraintLayout>